--- a/config/application.properties
+++ b/config/application.properties
@@ -11,3 +11,9 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+
+
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+management.endpoint.shutdown.enabled=true
+management.endpoint.auditevents.enabled=true
