--- a/config/application.properties
+++ b/config/application.properties
@@ -1,5 +1,7 @@
 a.b.c=osman
 
+refresh.test=ali
+
 eureka.client.service-url.defaultZone=http://127.0.0.1:5555/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
