--- a/config/application.properties
+++ b/config/application.properties
@@ -1,6 +1,6 @@
 a.b.c=osman
 
-refresh.test=ali
+refresh.test=ayse
 
 eureka.client.service-url.defaultZone=http://127.0.0.1:5555/eureka/
 eureka.client.register-with-eureka=true
